Fix semi-colon expected

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
 
 <style type="text/css">
     .ldBar-label {
-      color:#279b1d
+      color:#279b1d;
       font-family: 'Tahoma';
       font-size: 2.5em;
       font-weight: 900;
     }
-    .ldBar path.mainline {
-    /* styling of bar omitted */        
-    }  
+    /*
+    .ldBar path.mainline {} 
+    */ 
 </style>
 <script>
     var bar1 = new ldBar(".myBar1", {
